--- a/server/static/css/streams.css
+++ b/server/static/css/streams.css
@@ -14,7 +14,8 @@ h1 {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
-    max-width: 600px;
+    /* max-width: 800px; */
+    max-width: 75vw;
     margin-left: auto;
     margin-right: auto;
 }
@@ -33,7 +34,8 @@ h1 {
 }
 .stream-list {
     width: 80%;
-    max-width: 600px;
+    /* max-width: 1000px; */
+    max-width: 100vw;
     margin: 0 auto;
     padding: 20px;
     background-color: #ffffff;
