Добавлена поддержка нескольких сервисов в веб интерфейсе

--- a/server/templates/editor.html
+++ b/server/templates/editor.html
@@ -65,7 +65,7 @@
             <div class="warning-banner">
                 <i class="material-icons" style="color: #FFC107;">warning</i>
                 <div>
-                    <strong>Warning:</strong> C regex is not great, so use only stupid regex, for example [0-9]+ instead of d+.
+                    <strong>Warning:</strong> C regex is not great, so use only stupid regex, for example [0-9]+ instead of d+. But there is Golang regex for http.
                 </div>
             </div>
             
