Ограничено количество стримов на одной странице до 500, добавлена страница которая среди последних 3000 стримов ищет те которые могут быть чекером или сплоитом (в них был найден флаг)

--- a/server/web_app/templates/services.html
+++ b/server/web_app/templates/services.html
@@ -17,6 +17,9 @@
             <a href="/editor" class="btn">
                 <i class="material-icons">code</i> Editor
             </a>
+            <a href="/should_check" class="btn">
+                <i class="material-icons">style</i> Checker or sploit
+            </a>
         </div>
         <div class="header-right">
             <button class="btn" id="logout-btn" title="Logout" style="padding: 5px 10px;">
