--- a/server/web_app/templates/services.html
+++ b/server/web_app/templates/services.html
@@ -50,6 +50,10 @@
                             <span class="detail-label">Is HTTP:</span>
                             <span class="detail-value">{{ service_data.is_http }}</span>
                         </div>
+                        <div class="detail-item">
+                            <span class="detail-label">Protocol:</span>
+                            <span class="detail-value">{{ service_data.protocol }}</span>
+                        </div>
                     </div>
                 </a>
             {% endfor %}
